fixed layout shift

--- a/index.css
+++ b/index.css
@@ -35,6 +35,11 @@ body {
 
 body canvas {
   cursor: pointer;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 main {
